WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248210
[WPE] gamepad crashes on raspberry pi 4 (arm64)
https://bugs.webkit.org/show_bug.cgi?id=248210
Summary
[WPE] gamepad crashes on raspberry pi 4 (arm64)
Víctor M. Jáquez L.
Reported
2022-11-22 03:18:28 PST
This is a breadcrumbs of the initial merge, because in libwpe uintptr_t is used for gamepad id, while in webkit's platform code unsigned is used.
Attachments
Add attachment
proposed patch, testcase, etc.
Víctor M. Jáquez L.
Comment 1
2022-11-22 03:29:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6728
EWS
Comment 2
2022-11-22 09:00:41 PST
Committed
256940@main
(a6099cec8ff2): <
https://commits.webkit.org/256940@main
> Reviewed commits have been landed. Closing PR #6728 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug