Cherry-pick 256940@main (a6099cec8ff2). https://bugs.webkit.org/show_bug.cgi?id=248210

[WPE] gamepad crashes on raspberry pi 4 (arm64)
    https://bugs.webkit.org/show_bug.cgi?id=248210

    Reviewed by Michael Catanzaro.

    This is a breadcrumbs of the initial merge, because in libwpe uintptr_t is used for
    gamepad id, while in webkit's platform code unsigned is used.

    * Source/WebCore/platform/gamepad/libwpe/GamepadProviderLibWPE.cpp:
    (WebCore::GamepadProviderLibWPE::gamepadConnected):
    (WebCore::GamepadProviderLibWPE::gamepadDisconnected):
    (WebCore::GamepadProviderLibWPE::removeGamepadForId):
    * Source/WebCore/platform/gamepad/libwpe/GamepadProviderLibWPE.h:

    Canonical link: https://commits.webkit.org/256940@main